--- a/themes/glitch-multi-column/frappe/red.css
+++ b/themes/glitch-multi-column/frappe/red.css
@@ -6112,6 +6112,8 @@ button.optional.copyable.icon-button {
 }
 
 .layout-multiple-columns .status:not(.status--in-thread) > .more-from-author {
+  box-sizing: border-box;
+  padding-inline-start: 16px !important;
   width: calc(100% - var(--catppuccin-glitch-status-gutter) + 2px) !important;
 }
 
@@ -6150,6 +6152,8 @@ button.optional.copyable.icon-button {
 }
 
 .layout-multiple-columns .status--in-thread > .more-from-author {
+  box-sizing: border-box;
+  padding-inline-start: 16px !important;
   width: calc(100% - var(--catppuccin-glitch-thread-margin) + 2px) !important;
 }
 
@@ -6160,5 +6164,8 @@ button.optional.copyable.icon-button {
   margin-inline-start: var(--catppuccin-glitch-thread-margin) !important;
   padding-left: 0 !important;
   padding-right: 0 !important;
+}
+.layout-multiple-columns .status__quote .status.status--is-quote > .status__content .status__content__text {
+  padding-inline-start: calc(var(--size-avatar) + var(--gap-default)) !important;
 }
 }
